[package]
name = "llm"
version = "0.1.0"
edition = "2024"







[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
eframe = "0.20"      # (or whichever version you use)
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

